re PR target/12224 (TLS doesn't work)

2003-09-09  Richard Henderson  <rth@redhat.com>

	PR target/12224:
        * config/ia64/ia64.c (ia64_expand_move): Properly truncate
        result when op0 is SImode.

From-SVN: r71264